--- a/styles.css
+++ b/styles.css
@@ -65,7 +65,6 @@ ul li a:hover {
 
 #social-links{
   display: flex;
-  gap: 16px;
   padding: 24px 0;
 
   justify-content: center;
@@ -74,5 +73,16 @@ ul li a:hover {
 #social-links a {
   display: flex;
   font-size: 24px;
+  padding: 16px;
+  border-radius: 50%;
+
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  transition: background 0.2s;
+}
+
+#social-links a:hover {
+  background:rgba(255, 255, 255, 0.2);
+  
 }
 
