--- a/styles.css
+++ b/styles.css
@@ -4,13 +4,31 @@
   box-sizing: border-box;
 }
 
+:root {
+  --text-color: white;
+  --bg-url: url(./assets/bg-mobile.jpg);
+  --stroker-color: rgba(255, 255, 255, 0.5);
+  --surface-color: rgba(255, 255, 255, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --highlight-color: rgba(255, 255, 255, 0.2);
+}
+
+.light {
+  --text-color: black;
+  --bg-url: url(./assets/bg-mobile-light.jpg);
+  --stroker-color: rgba(0, 0, 0, 0.5);
+  --surface-color: rgba(0, 0, 0, 0.05);
+  --surface-color-hover: rgba(0, 0, 0, 0.02);
+  --highlight-color: rgba(0, 0, 0, 0.1);
+}
+
 body * {
   font-family: "Inter", sans-serif;
-  color: #ffffff;
+  color: var(--text-color);
 }
 
 body {
-  background: url(./assets/bg-mobile.jpg) no-repeat top center/cover;
+  background: var(--bg-url) no-repeat top center/cover;
 }
 
 #container {
@@ -47,9 +65,10 @@ ul li a {
   justify-content: center;
   align-items: center;
 
-  background: rgba(255, 255, 255, 0.05);
-  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: var(--surface-color);
+  border: 1px solid var(--stroker-color);
   border-radius: 8px;
+  font-weight: 500;
   text-decoration: none;
   padding: 16px 0;
 
@@ -59,8 +78,8 @@ ul li a {
 }
 
 ul li a:hover {
-  background: rgba(0, 0, 0, 0.02);
-  border: 1.5px solid rgba(255, 255, 255, 0.5);
+  background: var(--surface-color-hover);
+  border: 1.5px solid var(--stroker-color);
 }
 
 #social-links {
@@ -82,10 +101,10 @@ ul li a:hover {
 }
 
 #social-links a:hover {
-  background: rgba(255, 255, 255, 0.2);
+  background: var(--highlight-color);
 }
 
-footer{
+footer {
   font-weight: 400px;
   font-size: 14px;
   text-align: center;
