--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@
   --surface-color: rgba(255, 255, 255, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(255, 255, 255, 0.2);
+  --switch-bg-url: url(./assets/moon-stars.svg);
 }
 
 .light {
@@ -20,6 +21,7 @@
   --surface-color: rgba(0, 0, 0, 0.05);
   --surface-color-hover: rgba(0, 0, 0, 0.02);
   --highlight-color: rgba(0, 0, 0, 0.1);
+  --switch-bg-url: url(./assets/sun.svg);
 }
 
 body * {
@@ -50,6 +52,36 @@ body {
 #profile p {
   font-weight: 500;
   margin-top: 8px;
+}
+
+#switch {
+  position: relative;
+  width: 64px;
+  margin: 4px auto 0;
+}
+
+#switch button {
+  display: flex;
+  width: 32px;
+  height: 32px;
+  border: 0;
+  background: white var(--switch-bg-url) no-repeat center;
+  border-radius: 50%;
+  
+
+  position: absolute;
+  top: 50%;
+  left:0;
+  transform: translateY(-50%);
+  z-index: 1;
+}
+
+#switch span {
+  display: block;
+  height: 24px;
+  background: var(--surface-color);
+  border: 1px solid var(--stroker-color);
+  border-radius: 9999px;
 }
 
 ul {
