Creating a script to add click action to the dark/light theme switch button and change the avatar

--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,10 @@ body {
   -webkit-backdrop-filter: blur(4px);
 }
 
+.light #switch button {
+  left: 50%; 
+}
+
 #switch button:hover {
   outline: 8px solid var(--highlight-color);
 }
