--- a/styles.css
+++ b/styles.css
@@ -34,9 +34,12 @@ body {
 }
 
 #container {
-  width: 360px;
+  width: 100%;
+  max-width: 588px;
+  height: 100%;
   margin: 56px auto 0;
   padding: 0 24px;
+
 }
 
 #profile {
@@ -154,6 +157,7 @@ footer {
   padding: 24px 0;
 }
 
+/*animation*/
 @keyframes slide-in {
   from {
     left: 0;
@@ -168,5 +172,15 @@ footer {
   }
   to {
     left: 0;
+  }
+}
+
+/* media queries */
+@media (min-width: 700px) {
+  :root {
+    --bg-url: url(./assets/bg-desktop.jpg);
+  }
+  .light {
+    --bg-url: url(./assets/bg-desktop-light.jpg);
   }
 }
